--- a/Final Project/assets/main.glade
+++ b/Final Project/assets/main.glade
@@ -2,8 +2,9 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
-  <object class="GtkWindow" id="Life Xperience">
+  <object class="GtkWindow" id="mainWindow">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">Life Experience</property>
     <property name="default-width">440</property>
     <property name="default-height">250</property>
     <child>
