--- a/Final Project/assets/main.glade
+++ b/Final Project/assets/main.glade
@@ -501,10 +501,23 @@
       </object>
     </child>
   </object>
+  <object class="GtkPopover" id="messageArea">
+    <property name="can-focus">False</property>
+    <property name="relative-to">messageSeparator</property>
+    <child>
+      <object class="GtkLabel" id="messageLabel">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="xpad">2</property>
+        <property name="ypad">2</property>
+        <property name="label" translatable="yes">label</property>
+        <property name="justify">center</property>
+        <property name="wrap">True</property>
+      </object>
+    </child>
+  </object>
   <object class="GtkDialog" id="questDialog">
     <property name="can-focus">False</property>
-    <property name="default-width">240</property>
-    <property name="default-height">240</property>
     <property name="type-hint">dialog</property>
     <property name="decorated">False</property>
     <property name="transient-for">mainWindow</property>
@@ -565,7 +578,7 @@
                   <object class="GtkLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Quest Name:</property>
+                    <property name="label" translatable="yes">Name:</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -599,11 +612,11 @@
                   <object class="GtkLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Gold Rewarded:</property>
+                    <property name="label" translatable="yes">Gold:</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
-                    <property name="fill">True</property>
+                    <property name="fill">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -633,7 +646,7 @@
                   <object class="GtkLabel" id="dueDateT">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Due Date:</property>
+                    <property name="label" translatable="yes">Date Due:</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -765,11 +778,11 @@
                   <object class="GtkLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Item Name</property>
+                    <property name="label" translatable="yes">Name:</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
-                    <property name="fill">True</property>
+                    <property name="fill">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -803,7 +816,7 @@
                   </object>
                   <packing>
                     <property name="expand">True</property>
-                    <property name="fill">True</property>
+                    <property name="fill">False</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
